Fixed so no border radius on shift layers in between in person schedule.

--- a/Teleopti.Ccc.Web/Teleopti.Ccc.Web/Areas/Anywhere/Content/Styles/person-schedule.css
+++ b/Teleopti.Ccc.Web/Teleopti.Ccc.Web/Areas/Anywhere/Content/Styles/person-schedule.css
@@ -32,12 +32,9 @@
 	height: 57px;
 }
 
-.person-schedule  .shift .layer 
+.person-schedule .shift .layer 
 {
 	height: 40px;
-	-webkit-border-radius: 4px 4px 4px 4px;
-	   -moz-border-radius: 4px 4px 4px 4px;
-			border-radius: 4px 4px 4px 4px;
 }
 
 .person-schedule .shift .layer:first-of-type
